--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".intro.IntroActivity"
+            android:name=".activity.intro.IntroActivity"
             android:label="@string/app_intro"
             android:theme="@style/FullscreenTheme" />
 
@@ -40,13 +40,18 @@
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".activity.WhiteListActivity" />
+        <activity
+            android:name=".activity.intro.IntroToUseActivity"
+            android:label="@string/title_activity_intro_to_use"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.WhiteListActivity" />
     </application>
 
 </manifest>
