--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.intro.IntroActivity"
-            android:label="@string/app_intro"
-            android:theme="@style/FullscreenTheme" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -39,10 +35,10 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.WhiteListActivity" />
         <activity
-            android:name=".activity.intro.IntroToUseActivity"
+            android:name=".activity.intro.IntroActivity"
             android:label="@string/title_activity_intro_to_use"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
